# evolution-exchange

./: .cvsignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac  configure.in  evolution-exchange-zip.in  evolution-exchange.doap  glib-gen.mak
addressbook/: .cvsignore  Makefile.am  apps_exchange_addressbook.schemas.in.in  e-book-backend-db-cache.c  e-book-backend-db-cache.h  e-book-backend-exchange-factory.c  e-book-backend-exchange-factory.h  e-book-backend-exchange.c  e-book-backend-gal-factory.c  e-book-backend-gal-factory.h  e-book-backend-gal.c  e-book-backend-gal.h  pas-backend-ad.c  pas-backend-ad.h  pas-backend-exchange.c  pas-backend-exchange.h
calendar/: .cvsignore  Makefile.am  cal-backend-exchange-utils.c  cal-backend-exchange.c  cal-backend-exchange.h  e-cal-backend-exchange-calendar.c  e-cal-backend-exchange-calendar.h  e-cal-backend-exchange-factory.c  e-cal-backend-exchange-factory.h  e-cal-backend-exchange-tasks.c  e-cal-backend-exchange-tasks.h  e-cal-backend-exchange.c  e-cal-backend-exchange.h  e2k-cache.c  e2k-cache.h  e2k-cal-component-todo.c  e2k-cal-component.c  e2k-cal-component.h  e2k-cal-query.c  e2k-cal-query.h  e2k-cal-utils.c  e2k-cal-utils.h
camel/: .cvsignore  Makefile.am  camel-exchange-folder.c  camel-exchange-folder.h  camel-exchange-journal.c  camel-exchange-journal.h  camel-exchange-provider.c  camel-exchange-search.c  camel-exchange-search.h  camel-exchange-store.c  camel-exchange-store.h  camel-exchange-summary.c  camel-exchange-summary.h  camel-exchange-transport.c  camel-exchange-transport.h  camel-exchange-utils.c  camel-exchange-utils.h  camel-stub-constants.h  camel-stub-marshal.c  camel-stub-marshal.h  camel-stub.c  camel-stub.h  mail-utils.c  mail-utils.h
component/: .cvsignore  Exchange-Component.idl  GNOME_Evolution_Exchange_Component.server.in.in  Makefile.am  Ximian-Connector.idl  exchange-component-factory.c  exchange-component.c  exchange-component.h
docs/: ChangeLog  Makefile.am  README  autoconfig  debug  delegates  favorites  forms-based-auth  freebusy  icalendar  mail  mapi-properties  ntlm  security  sending-mail  service-packs
docs/ietf/: Makefile.am  draft-davis-dasl-protocol-00.txt
docs/reference/: .cvsignore  Makefile.am  evolution-exchange-docs.sgml  ximian-connector-docs.sgml  ximian-connector-sections.txt  ximian-connector.types
docs/reference/arch/: bug-private.xml  bug-xml.xml  calendar.xml  mail.xml  ntlm.xml
docs/reference/features/: autoconfig.xml  delegation.xml  favorites.xml  fba.xml  freebusy.xml  other-users.xml  permissions.xml  threading.xml
docs/reference/tmpl/: e2k-action.sgml  e2k-autoconfig.sgml  e2k-context-private.sgml  e2k-context.sgml  e2k-encoding-utils.sgml  e2k-freebusy.sgml  e2k-global-catalog.sgml  e2k-http-utils.sgml  e2k-kerberos.sgml  e2k-operation-private.sgml  e2k-operation.sgml  e2k-properties.sgml  e2k-restriction-vapor.sgml  e2k-restriction.sgml  e2k-result-private.sgml  e2k-result.sgml  e2k-rule-xml.sgml  e2k-rule.sgml  e2k-security-descriptor.sgml  e2k-sid.sgml  e2k-uri.sgml  e2k-user-dialog.sgml  e2k-utils.sgml  e2k-xml-utils.sgml  mapi.sgml  test-utils.sgml  ximian-connector-unused.sgml  xntlm-des.sgml  xntlm-md4.sgml  xntlm.sgml
eplugin/: Makefile.am  exchange-account-setup.c  exchange-calendar.c  exchange-change-password.c  exchange-config-listener.c  exchange-config-listener.h  exchange-contacts.c  exchange-delegates-user.c  exchange-delegates-user.h  exchange-delegates.c  exchange-folder-permission.c  exchange-folder-size-display.c  exchange-folder.c  (+13 more)
lib/: .cvsignore  Makefile.am  actest.c  cptest.c  e2k-autoconfig.c  e2k-autoconfig.h  e2k-connection.c  e2k-connection.h  e2k-context.c  e2k-encoding-utils.c  e2k-encoding-utils.h  e2k-freebusy.c  e2k-freebusy.h  e2k-global-catalog.c  e2k-global-catalog.h  e2k-http-utils.c  e2k-kerberos.c  e2k-kerberos.h  e2k-license.c  e2k-license.h  e2k-marshal.list  e2k-operation.h  e2k-properties.c  e2k-properties.h  e2k-propnames.h.in  e2k-restriction.c  e2k-restriction.h  e2k-result.c  e2k-result.h  e2k-rule-xml.c  e2k-rule-xml.h  e2k-rule.h  e2k-security-descriptor.c  e2k-security-descriptor.h  e2k-sid.c  e2k-types.h  e2k-uri.c  e2k-uri.h  e2k-user-dialog.c  e2k-utils.c  (+10 more)
mail/: .cvsignore  Makefile.am  mail-stub-exchange.c  mail-stub-exchange.h  mail-stub-listener.c  mail-stub-listener.h  mail-stub.c  mail-stub.h  mail-utils.c  mail-utils.h
shell/: .cvsignore  Makefile.am  e-folder-creation-dialog.c  e-folder-creation-dialog.h  e-folder-dnd-bridge.c  e-folder-misc-dialogs.c  e-folder-misc-dialogs.h  e-folder-selection-dialog.c  e-folder-selection-dialog.h  e-folder-type-registry.c  e-folder-type-registry.h  e-folder.c  e-icon-factory.c  e-storage-set-view.c  e-storage-set-view.h  e-storage-set.c  e-storage.c
storage/: .cvsignore  GNOME_Evolution_Exchange_Storage.server.in.in  Makefile.am  apps_evolution_exchange.schemas  e-folder-exchange.c  e-folder-exchange.h  exchange-account.c  exchange-account.h  exchange-autoconfig-wizard.c  exchange-autoconfig-wizard.glade  exchange-autoconfig-wizard.h  exchange-change-password.c  exchange-change-password.glade  exchange-change-password.h  exchange-component.c  exchange-component.h  exchange-config-listener.c  exchange-config-listener.h  exchange-delegates-control.c  exchange-delegates-control.h  exchange-delegates-delegates.c  exchange-delegates-delegators.c  exchange-delegates-user.c  exchange-delegates-user.h  exchange-delegates.c  exchange-delegates.glade  exchange-delegates.h  exchange-folder-size.c  exchange-folder-size.h  exchange-hierarchy-favorites.c  exchange-hierarchy-favorites.h  exchange-hierarchy-foreign.c  exchange-hierarchy-foreign.h  exchange-hierarchy-gal.c  exchange-hierarchy-somedav.c  exchange-hierarchy-somedav.h  exchange-hierarchy-webdav.c  exchange-hierarchy-webdav.h  exchange-hierarchy.c  exchange-hierarchy.h  (+30 more)
tools/: Makefile.am  exchange-autoconfig-wizard.c  exchange-autoconfig-wizard.h  exchange-share-config-listener.c  exchange-share-config-listener.h  migr-test.c  ximian-connector-setup.c
(+159 files in other folders)
