SUBDIRS =				\
	camel mail			\
	addressbook calendar		\
	shell storage			\
	po docs 

DISTCLEANFILES =				\
	intltool-extract			\
	intltool-update				\
	intltool-merge

EXTRA_DIST =				\
	intltool-extract.in		\
	intltool-merge.in		\
	intltool-update.in

DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc

